2015-04-08  Ilya Enkovich  <ilya.enkovich@intel.com>

	* tree-chkp.c (chkp_find_const_bounds_var): Remove.
	(chkp_make_static_const_bounds): Search existing
	symbol by assembler name.  Use make_decl_one_only.
	(chkp_get_zero_bounds_var): Remove node	search which
	is now performed in chkp_make_static_const_bounds.
	(chkp_get_none_bounds_var): Likewise.

2015-04-08  Michael Witten  <mfwitten@gmail.com>

	* doc/extend.texi (Attribute Syntax): Add a trailing semicolon
	to an example.

2015-04-08  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* tree.h (CONVERT_EXPR_P): Commentary typo fix.

2015-04-08  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/extend.texi (__sync Builtins): Fix grammar.

2015-04-08  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/cfg.texi (GIMPLE statement iterators): Fix typo.

2015-04-08  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* varasm.c (emit_local): Move definition of align.

2015-04-08  Julian Brown  <julian@codesourcery.com>

	* config/nvptx/mkoffload.c (process): Support variable mapping.

2015-03-27  Trevor Saunders  <tbsaunde@tbsaunde.org>

	* config/alpha/alpha.c (alpha_use_linkage): Change type of slot to
	alpha_links **.
	(alpha_write_one_linkage): Correct typo.

2015-04-08  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-comdats.c (propagate_comdat_group): Walk through thunks.

2015-04-08  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (bootstrap-lto-noplugin): Rewrite. 

2015-04-08  Ilya Enkovich  <ilya.enkovich@intel.com>

	* tree-chkp.h (chkp_insert_retbnd_call): New.
	* tree-chkp.c (chkp_insert_retbnd_call): New.
	* ipa-split.c (insert_bndret_call_after): Remove.
	(split_function): Use chkp_insert_retbnd_call.
	* cgraphunit.c (cgraph_node::expand_thunk): Build returned
	bounds for instrumented functions.

2015-04-07  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65540
	* calls.c (initialize_argument_information): When producing tail
	call also turn SSA_NAMES passed by references to original PARM_DECLs
